Make positioning work and fix map overflow issues

--- a/client/css/observer.sass
+++ b/client/css/observer.sass
@@ -1,7 +1,7 @@
 @import "bootstrap.scss";
 
 body
-  overflow:hidden
+  overflow: hidden
 
 .dropdown-selector-label
   padding-right: ($spacer * .5)
@@ -9,9 +9,15 @@ body
 
 #product-selection-row
   padding-top: ($spacer * .5)
-  padding-bottom: ($spacer * .5)
+  /* padding-bottom: ($spacer * .5)
+  margin-bottom: 0
+  border-bottom: 0
 
 .vcenter
   display: inline-block
   vertical-align: middle
   float: none
+
+.ol-zoom
+  top: 25px
+  left: 25px
